Use the correct Node for ScrollTimeline for document.scrollingElement

document.scrollingElement is a bit special; from the javascript side of
the world it looks like either the <html> or <body> (in quirks mode),
but internally the actual scroll information is kept on the root
#document node. This CL fixes our logic to properly resolve the
scrollSource in this case.

Bug: 843727
Change-Id: I5c19ae0a757f24391097794906fd932e7a9a6529
Reviewed-on: https://chromium-review.googlesource.com/1083149
Reviewed-by: Yi Gu <yigu@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564481}
Former-commit-id: 5796e5b72e2fc944272f859ef58192c3f7c06362